# codewars-scraper

./: Pipfile  README.md  pyproject.toml
codewars_scraper/: __init__.py  __main__.py  file_extensions.py  scraper.py  speedups.py
