[tool.poetry]
name = "codewars-scraper"
version = "1.0"
description = "Codewars scraper which allows you to parse and download your katas"
authors = ["dhvcc <1337kwiz@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
codewars-scraper = "codewars_scraper.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
pathvalidate = "^2.3.0"
loguru = "^0.5.3"
ujson = {version = "^4.0.1", optional = true}
webdrivermanager = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
